--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "broadlink-core",
-	"version": "1.0.2",
+	"version": "1.2.0",
 	"description": "Connection library to Broadlink SP WiFi-connected switches",
 	"main": "index.js",
 	"dependencies": {
 		"hexl": "^1.0.1",
 		"ipaddr.js": "^1.9.1",
-		"optist": "^1.0.6"
+		"optist": "^1.0.6",
+		"rndgen": "^1.0.0"
 	},
 	"scripts": {
 		"test": "node ./test/test.js"
