--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "broadlink-core",
-	"version": "1.3.0",
-	"description": "Connection library to Broadlink SP WiFi-connected switches",
+	"version": "1.5.0",
+	"description": "Connection library to Broadlink WiFi-connected switches and sensors",
 	"main": "index.js",
 	"dependencies": {
 		"hexl": "^1.0.1",
@@ -20,9 +20,9 @@
 		"url": "git+https://github.com/rinne/node-broadlink-core.git"
 	},
 	"keywords": [
-		"encryption",
-		"cipher",
-		"bitwise"
+		"broadlink",
+		"smart home",
+		"remote control"
 	],
 	"author": {
 		"name": "Timo J. Rinne",
